1999-09-28  Ian Peters  <itp@gnu.org>

	* Added intl to SUBDIRS in Makefile.am and intl/Makefile to AC_OUTPUT in
	  configure.in.  Do I really know what I'm doing?  No.  But everyone
	  else does it, and it closes #2403.  :)

1999-09-26  Ian Peters  <itp@gnu.org>

	* Calling it 1.0.42 in configure.in

1999-09-26  Ian Peters  <itp@gnu.org>

	* Martin helped me rename the gnothello and gyahtzee directories on cvs.
	  Modified configure.in and Makefile.am to use the new names.

1999-09-25  Ian Peters  <itp@gnu.org>

	* Merged some changes from gnome-games-1-0 branch, since nobody was
	  using that for bug fixing anyway.  Removed metatris and gnobots from
	  Makefile.am and configure.in, as gnometris is our functional tetris
	  program and gnobots2 has the functionality of gnobots encompassed.

1999-09-10  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added estonian to ALL_LINGUAS

1999-09-07  Tomas Ogren  <stric@ing.umu.se>

	* configure.in: Added sv to ALL_LINGUAS

1999-09-03  Zbigniew Chyla <chyla@alice.ci.pwr.wroc.pl>

	* *.soundlist: Added Polish translations.

1999-08-27  Chris Rogers <gandalf@darkcorner.net>

	* Makefile.am (cxx_SUBDIRS): add gataxx to the build.

1999-06-03  James Henstridge  <james@daa.com.au>

	* Makefile.am (cxx_SUBDIRS): add xbill to the build.

1999-06-03  James Henstridge  <james@daa.com.au>

	* xbill/*: added a new game

	* configure.in: added entries to create xbill's makefiles.  The game
	is not built by default yet.

1999-04-24  Shooby Ban <bansz@szif.hu>

	* glines/*: Added a new game.
	  po/hu.po: Added hungarian translations.

1999-04-18  Matthias Warkus  <mawa@iname.com>

	* */*.desktop: Updated German translations.

1999-04-10  Scott D. Heavner  <sdh@po.cwru.edu>

	* configure.in: Add gyahtzee (gtali) help directory to list of
	makefiles. 

1999-04-05  Chris Rogers <gandalf@pobox.com>

	* configure.in: Added gataxx.

	* Makefile.am (SUBDIRS): Added gataxx.

1999-02-22  Jonathan Blandford  <jrb@redhat.com>
