@@ -10,7 +10,7 @@ Version: 	%ver
 Release: 	%rel
 Copyright: 	GPL
 Group: 		Amusements/Games
-Source: ftp://ftp.gnome.org/pub/GNOME/sources/gnome-games-%{PACKAGE_VERSION}.tar.gz
+Source:		ftp://ftp.gnome.org/pub/GNOME/sources/gnome-games-%{PACKAGE_VERSION}.tar.gz
 BuildRoot: 	/var/tmp/gnome-games-%{PACKAGE_VERSION}-root
 URL: 		http://www.gnome.org
 Docdir: 	%{prefix}/doc
@@ -30,7 +30,7 @@ If you would like to develop addtional games that utilize the GNOME
 games libraries then you should install the gnome-games-devel package.
 
 %package devel
-Summary: GNOME games development libraries.
+Summary:	GNOME games development libraries.
 Group: 		Development/Libraries
 Requires:	gnome-games
 
@@ -48,6 +48,11 @@ If you would like to develop addtional games that utilize the GNOME
 games libraries then you should install the gnome-games-devel package.
 
 %changelog
+* Tue Sep 28 1999 Ian Peters <itp@gnu.org>
+
+- Merged some changes from Dax Kelson <dax@gurulabs.com> to get this thing to
+  work right.
+
 * Sun Aug 01 1999 Gregory McLean <gregm@comstar.net>
 
 - Updated with better descriptions and more consistant layout.
@@ -85,7 +90,7 @@ fi
 %install
 rm -rf $RPM_BUILD_ROOT
 
-make prefix=$RPM_BUILD_ROOT%{prefix} sysconfdir=$RPM_BUILD_ROOT/etc install >install.log 2>&1
+make prefix=$RPM_BUILD_ROOT%{prefix} scoredir=$RPM_BUILD_ROOT/var/lib/games sysconfdir=$RPM_BUILD_ROOT/etc install >install.log 2>&1
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -108,20 +113,21 @@ fi
 %attr(-, root, games) %{prefix}/bin/*
 %config /etc/sound/events
 %{prefix}/share/gnome/apps/Games/*
-%{prefix}/share/gnibbles
-%{prefix}/share/gnobots2
+%{prefix}/share/gnibbles/*
+%{prefix}/share/gnobots2/*
 %{prefix}/share/gnome/help/*
-%{prefix}/share/gnome-stones
-%{prefix}/share/gturing
+%{prefix}/share/gnome-stones/*
+%{prefix}/share/gturing/*
 %{prefix}/share/locale/*/*/*
 %{prefix}/share/pixmaps/*
-%{prefix}/share/sol-games
+%{prefix}/share/sol-games/*
 %{prefix}/share/sounds/*
-%{prefix}/share/xbill
+%{prefix}/share/xbill/*
 
 %{prefix}/lib/lib*.so.*
 %{prefix}/lib/gnome-stones/objects/lib*.so.*
-#%ghost /var/lib/games/*
+%defattr(-, games, games)
+/var/lib/games/*
 
 %files devel
 %defattr(-, root, root)
