@@ -1,5 +1,10 @@
 1999-09-28  Ian Peters  <itp@gnu.org>
 
+	* Changes to gnome-games.spec.in from Dax Kelson @gurulabs.  Should
+	  hopefully fix the .score files being installed for Red Hat (#2398).
+
+1999-09-28  Ian Peters  <itp@gnu.org>
+
 	* Added intl to SUBDIRS in Makefile.am and intl/Makefile to AC_OUTPUT in
 	  configure.in.  Do I really know what I'm doing?  No.  But everyone
 	  else does it, and it closes #2403.  :)
